--- a/example/index.html
+++ b/example/index.html
@@ -6,13 +6,14 @@
 
     <title>Javascript- und CSS-Resourcen-Verwaltung mit grunt.js</title>
 
-    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="css/all.css">
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
     <script src="js/app.min.js"></script>
 
   </head>
 
   <body>
-    <div class="content"><span class="invisible"></span></div>
+    <div class="content border"><span class="invisible"></span></div>
+    <div class="grey_content border"><span class="invisible"></span></div>
   </body>
 </html>
