Added phing and fixed typos
Change-Id: I55c6fe9217b2bf4fe7cfa64acb9e8169c7bf06ad

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <li class="fragment roll-in">Einfach lesbare Syntax (vgl. z.B. Ant und Rake)</li>
               <li class="fragment roll-in">Klassische Frontend-Tasks Out-of-the-box</li>
               <li class="fragment roll-in">Sehr flache Lernkurve</li>
-              <li class="fragment roll-in">erweiterbar</li>
+              <li class="fragment roll-in">Erweiterbar</li>
               <li class="fragment roll-in">Gut in bestehenden Projekten einsetzbar</li>
           </ul>
       </div>
@@ -88,9 +88,10 @@
   <section>
    <h2>Alternativen?</h2>
    <ul>
-     <li>jake (kein watch Task, webserver)</li>
+     <li>jake (sehr wenige Tasks Out of the box)</li>
      <li>brunch.io (Stärken vor allem in Scaffolding)</li>
      <li>Ant (Plugins / Erweiterungen sind recht aufwendig einzupflegen, krude Syntax)</li>
+     <li>Phing (keine Frontendtasks Out of the box)</li>
      <li>Weitere ?</li>
    </ul>
   </section>
@@ -107,7 +108,7 @@ mario@ubuntu:~/sudo npm install grunt</code></pre>
   <section>
         <h2>Projektaufbau<br>
         </h2>
-        <p>besteht im wesentlichen aus:</p>
+        <p>besteht im Wesentlichen aus:</p>
         <ul>
           <li>Gruntfile.js</li>
           <li>package.json</li>
