Cleaning up unused stuff

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
   <section>
    <h2>Alternativen?</h2>
    <ul>
-     <li>jake (sehr wenige Tasks Out of the box)</li>
-     <li>brunch.io (Stärken vor allem in Scaffolding)</li>
-     <li>Ant (Plugins / Erweiterungen sind recht aufwendig einzupflegen, krude Syntax)</li>
-     <li>Phing (keine Frontendtasks Out of the box)</li>
-     <li>Weitere ?</li>
+     <li class="fragment roll-in">Ant (Plugins / Erweiterungen sind recht aufwendig einzupflegen, krude Syntax)</li>
+     <li class="fragment roll-in">Phing (keine Frontend-Tasks Out of the box)</li>
+     <li class="fragment roll-in">brunch.io (Stärken vor allem in Scaffolding)</li>
+     <li class="fragment roll-in">jake (sehr wenige Tasks Out of the box)</li>
+     <li class="fragment roll-in">Weitere</li>
    </ul>
   </section>
 </section>
