--- a/example/index.html
+++ b/example/index.html
@@ -14,5 +14,6 @@
 
   <body>
     <div class="content border"><span class="invisible"></span></div>
+    <div class="included border">Included</div>
   </body>
 </html>
