Moving sildes around

--- a/index.html
+++ b/index.html
@@ -85,16 +85,6 @@
           </ul>
       </div>
   </section>
-  <section>
-   <h2>Alternativen?</h2>
-   <ul>
-     <li class="fragment roll-in">Ant (Plugins / Erweiterungen sind recht aufwendig einzupflegen, krude Syntax)</li>
-     <li class="fragment roll-in">Phing (keine Frontend-Tasks Out of the box)</li>
-     <li class="fragment roll-in">brunch.io (Stärken vor allem in Scaffolding)</li>
-     <li class="fragment roll-in">jake (sehr wenige Tasks Out of the box)</li>
-     <li class="fragment roll-in">Weitere</li>
-   </ul>
-  </section>
 </section>
     <section>
     <h2>Installation</h2>
@@ -287,6 +277,16 @@ module.exports = function(grunt) {
    <li>reveal.js</li>
    <li>...</li>
  </ul>
+</section>
+<section>
+  <h2>Alternativen</h2>
+  <ul>
+    <li class="fragment roll-in">Ant (Plugins / Erweiterungen sind recht aufwendig einzupflegen, krude Syntax)</li>
+    <li class="fragment roll-in">Phing (keine Frontend-Tasks Out of the box)</li>
+    <li class="fragment roll-in">brunch.io (Stärken vor allem in Scaffolding)</li>
+    <li class="fragment roll-in">jake (sehr wenige Tasks Out of the box)</li>
+    <li class="fragment roll-in">Weitere</li>
+  </ul>
 </section>
 <section>
   <section>
