--- a/example/index.html
+++ b/example/index.html
@@ -7,13 +7,13 @@
     <title>Javascript- und CSS-Resourcen-Verwaltung mit grunt.js</title>
 
     <link rel="stylesheet" href="css/all.css">
-    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
     <script src="js/app.min.js"></script>
+    <script src="http://grunt.local:35729/livereload.js"></script>
 
   </head>
 
   <body>
-    <div class="content border"><span class="invisible"></span></div>
-    <div class="included border">Included</div>
+    <div class="content border"><span class="invisible">no date set</span></div>
+    <div class="included border">border style via scss include</div>
   </body>
 </html>
